--- a/css/result.css
+++ b/css/result.css
@@ -147,7 +147,7 @@
 .product__table-btn{
     font-size: 10px;
     font-weight: 600;
-    line-height: 120%; /* 16.8px */
+    line-height: 120%;
     border-radius: 5px;
     background: var(--color-red);
     padding: 10px 30px;
@@ -156,7 +156,7 @@
     transition: all .1s ease;
 }
 .product__table-btn:active{
-    background-color: rgba(255, 0, 0, 0.6);
+    background-color: rgba(25, 25, 25, 0.5);
 }
 .product__table-item p{
     font-weight: 600;
@@ -364,9 +364,6 @@
         font-weight: 700;
         color: var(--color-red);
     }
-    /* .product__table-item p{
-        text-wrap: nowrap;
-    } */
     .product__table-item{
         width: 100% !important;
     }
@@ -461,64 +458,6 @@
     background-color: var(--color-red);
     border-radius: 6px;
 }
-.filter__label{
-    font-family: var(--font-family);
-    font-size: 12px;
-    font-style: normal;
-    color: var(--color-gray);
-    font-weight: 500;
-    line-height: 135%;
-    cursor: pointer;
-    width: auto;
-    min-width: 130px;
-}
-.filter__checkbox {
-    -moz-appearance: none;
-    appearance: none;
-    -webkit-appearance: none;
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-}
-.filter__checkbox + .checkmark {
-    position: relative;
-    top: 1px;
-    left: 0;
-    padding-left: 30px;
-    cursor: pointer;
-    display: inline-block;
-}
-.filter__checkbox + .checkmark:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: -2px;
-    width: 20px;
-    height: 20px;
-    border-radius: 4px;
-    border: 1px solid var(--color-gray);
-    background-color: var(--color-white);
-}
-.filter__checkbox:checked + .checkmark{
-    color: var(--color-dark);
-}
-.filter__checkbox:checked + .checkmark:before {
-    background: var(--color-red);
-    border: 1px solid var(--color-red);
-}
-.filter__checkbox:checked + .checkmark:after {
-    content: '';
-    position: absolute;
-    left: 2px;
-    top: 0px;
-    width: 16px;
-    height: 16px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M13.3337 4L6.00033 11.3333L2.66699 8' stroke='white' stroke-width='1.25' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-}
 .analogues__results{
     width: 100%;
     display: flex;
@@ -532,7 +471,17 @@
     height: max-content;
 }
 .filter__checkbox:checked + .checkmark + .label-text {
-    color: var(--color-red); /* Измените на нужный цвет */
+    color: var(--color-red);
+}
+.analogues__form-filters .filter__label{
+    font-size: 12px;
+    color: var(--color-gray);
+}
+.analogues__form-filters .filter__checkbox + .checkmark:before{
+    top: -2px;
+}
+.analogues__form-filters .filter__checkbox:checked + .checkmark:after{
+    top: 0px;
 }
 @media (max-width: 767px) {
     .analogues{
