--- a/css/result.css
+++ b/css/result.css
@@ -470,18 +470,66 @@
     max-width: 963px;
     height: max-content;
 }
-.filter__checkbox:checked + .checkmark + .label-text {
-    color: var(--color-red);
-}
-.analogues__form-filters .filter__label{
+.filter__label{
+    font-family: var(--font-family);
     font-size: 12px;
     color: var(--color-gray);
+    font-style: normal;
+    font-weight: 500;
+    line-height: 135%;
+    cursor: pointer;
+    width: auto;
+    min-width: 130px;
 }
-.analogues__form-filters .filter__checkbox + .checkmark:before{
+.filter__checkbox {
+    -moz-appearance: none;
+    appearance: none;
+    -webkit-appearance: none;
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+.filter__checkbox + .checkmark {
+    position: relative;
+    top: 1px;
+    left: 0;
+    padding-left: 30px;
+    cursor: pointer;
+    display: inline-block;
+}
+.filter__checkbox + .checkmark:before {
+    content: '';
+    position: absolute;
+    left: 0;
     top: -2px;
+    width: 20px;
+    height: 20px;
+    border-radius: 4px;
+    border: 1px solid var(--color-gray);
+    background-color: var(--color-white);
 }
-.analogues__form-filters .filter__checkbox:checked + .checkmark:after{
+.filter__checkbox:checked + .checkmark{
+    color: var(--color-dark);
+}
+.filter__checkbox:checked + .checkmark:before {
+    background: var(--color-red);
+    border: 1px solid var(--color-red);
+}
+.filter__checkbox:checked + .checkmark:after {
+    content: '';
+    position: absolute;
+    left: 2px;
     top: 0px;
+    width: 16px;
+    height: 16px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M13.3337 4L6.00033 11.3333L2.66699 8' stroke='white' stroke-width='1.25' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+}
+.filter__checkbox:checked + .checkmark + .label-text {
+    color: var(--color-red);
 }
 @media (max-width: 767px) {
     .analogues{
