--- a/css/result.css
+++ b/css/result.css
@@ -100,6 +100,11 @@
     gap: 4px;
     color: var(--color-gray);
 }
+.product__about-info:hover,
+.product__about-compatibility:hover,
+.product__about-top h3:hover{
+    text-decoration: none;
+}
 .product__item-table{
     width: 100%;
     max-width: 613px;
