--- a/css/style.css
+++ b/css/style.css
@@ -741,6 +741,7 @@ a.header__link:hover{
         background-color: transparent;
         margin-top: 20px;
         max-height: none;
+        height: auto;
     }
     .header__link-menu--content{
         max-height: none;
